--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -39,23 +39,23 @@ format_explainer:
 
 cards:
   - icon: icon-ontomatica
-    headline: Lightning Speed
-    text: 'AMP pages load near instantly – across all devices and platforms.'
-  - icon: icon-daily-care
-    headline: Easy Building
-    text: 'You can often convert your entire archive in days – especially when using common CMS like WordPress or Drupal.'
-  - icon: icon-electronic-label
-    headline: Maintain flexibility
-    text: 'You can use CSS to customize your styling and dynamic data to fetch the freshest data where needed.'
+    headline: Integrated Development Environment
+    text: '<em>Plato</em> (Platform for ontologies) applies functional programming and structured data during application development.\nCurated datasets promote standardization and reuse.\nVisualization and machine&#x2010;reasoning improve dataset quality ovr time.'
   - icon: icon-daily-food
-    headline: Ensure performance
-    text: 'It takes a lot of time and effort to build a great website. AMP components are already optimized for the best performance.'
+    headline: Tracking biology and chemistry
+    text: 'Electronic food and drug data helps track component intake over days, weeks, months, years.\nParticularly useful for mothers and their children, athletes, and people with specific diets\nHelps consumers answer composition and formulation questions <b>not</b> available on a printed label\nHelps pet owners track food and medicine consumed by their companions.\nHelps determine links between intake and health outcomes.'
+  - icon: icon-daily-care
+    headline: Tracking biology and chemistry
+    text: 'Electronic data about cosmetics, textiles and household chemicals helps track use and exposure to components over days, weeks, months, years.\nHelps consumers answer questions about fibers and chemicals <b>not</b> available on a printed label.\nHelps determine links between use/exposure and health outcomes.'
+  - icon: icon-electronic-label
+    headline: Identity and counterfeits
+    text: 'Electronic data helps promote a product's identity and impede a counterfeit product that claims to be equivalent.\nCreate new label by combining existing labels and adding new information.\nElectronic labels improve machine&#x2010;automation by supplying structured data to a machine's function.'
   - icon: icon-export-import-data
-    headline: Various web touch points
-    text: 'Used by global platforms like Google, Bing and Twitter, AMP allows users a native-feeling experience across all platforms by defaulting to AMP pages when available.'
+    headline: Be a friend to authorities
+    text: 'DailyFood's <em>Biograph</em> is a companion to person's Electronic Health Record.\nExImData's <em>Product Passport</em> is a companion to a company's Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).\nAuthorities such as US-California, European Union, Great Britain, Saudi Arabia and India have specific local rules and tarrifs.\n<em>Product Passport</em> enables conformance verification.'
   - icon: icon-fdi
-    headline: Open web
-    text: 'The AMP Project is an open source initiative to protect the future of the web by delivering a better, faster and more user-friendly experience.'
+    headline: Open standards, open data
+    text: 'Transforming data from individual scientific studies into shared data repositories.\nChapters in countries coordinate to synchronize local research with international research.\nFor example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India) and others.'
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
@@ -168,10 +168,17 @@ success_stories:
 
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
-      <h2 class="ap-h2">{{ _('How the organizations work for you') }}</h2>
+      <h2 class="ap-h2">{{ _('New information technology should aspire to accomplish two goals:') }}</h2>
+      <ol>
+      <li class="ap-center-stage-copy ap-p-large">
+        {{ _("take a business process that exists in many places and markedly reduce the total cost of its implementation.") }}
+      </li>
+      <li class="ap-center-stage-copy ap-p-large">
+        {{ _("develop new, productive habits among consumers.") }}
+      </li>
+      </ol>
       <p class="ap-center-stage-copy ap-p-large">
-        {{ _("Our built-in validation system guides your development
-        process. AMP comes with built-in accessibility and compatibility.") }}
+        {{ _("Consortium members aspire to accomplish both.") }}
       </p>
     </div>
   </section>
