--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -40,22 +40,60 @@ format_explainer:
 cards:
   - icon: icon-ontomatica
     headline: Integrated Development Environment
-    text: '<em>Plato</em> (Platform for ontologies) applies functional programming and structured data during application development.\nCurated datasets promote standardization and reuse.\nVisualization and machine&#x2010;reasoning improve dataset quality ovr time.'
+    text: |
+      <em>Plato</em> (Platform for ontologies) applies functional programming and structured data during application development.
+
+      Curated datasets promote standardization and reuse.
+
+      Visualization and machine&#x2010;reasoning improve dataset quality ovr time.
   - icon: icon-daily-food
     headline: Tracking biology and chemistry
-    text: 'Electronic food and drug data helps track component intake over days, weeks, months, years.\nParticularly useful for mothers and their children, athletes, and people with specific diets\nHelps consumers answer composition and formulation questions <b>not</b> available on a printed label\nHelps pet owners track food and medicine consumed by their companions.\nHelps determine links between intake and health outcomes.'
+    text: |
+      Electronic food and drug data helps track component intake over days, weeks, months, years.
+
+      Particularly useful for mothers and their children, athletes, and people with specific diets.
+
+      Helps consumers answer composition and formulation questions <b>not</b> available on a printed label.
+
+      Helps pet owners track food and medicine consumed by their companions.
+
+      Helps determine links between intake and health outcomes
   - icon: icon-daily-care
     headline: Tracking biology and chemistry
-    text: 'Electronic data about cosmetics, textiles and household chemicals helps track use and exposure to components over days, weeks, months, years.\nHelps consumers answer questions about fibers and chemicals <b>not</b> available on a printed label.\nHelps determine links between use/exposure and health outcomes.'
+    text: |
+      Electronic data about cosmetics, textiles and household chemicals helps track use and exposure to components over days, weeks, months, years.
+
+     Helps consumers answer questions about fibers and chemicals <b>not</b> available on a printed label.
+     
+     Helps determine links between use/exposure and health outcomes.'
   - icon: icon-electronic-label
     headline: Identity and counterfeits
-    text: 'Electronic data helps promote a product's identity and impede a counterfeit product that claims to be equivalent.\nCreate new label by combining existing labels and adding new information.\nElectronic labels improve machine&#x2010;automation by supplying structured data to a machine's function.'
+    text: |
+      Electronic data helps promote a product's identity and impede a counterfeit product that claims to be equivalent.
+
+      Create new label by combining existing labels and adding new information.
+
+      Electronic labels improve machine&#x2010;automation by supplying structured data to a machine's function.
   - icon: icon-export-import-data
-    headline: Be a friend to authorities
-    text: 'DailyFood's <em>Biograph</em> is a companion to person's Electronic Health Record.\nExImData's <em>Product Passport</em> is a companion to a company's Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).\nAuthorities such as US-California, European Union, Great Britain, Saudi Arabia and India have specific local rules and tarrifs.\n<em>Product Passport</em> enables conformance verification.'
+    headline: Be a friend to Authorities
+    text: |
+      DailyFood's <em>Biograph</em> is a companion to person's Electronic Health Record.
+
+      ExImData's <em>Product Passport</em> is a companion to a company's Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).
+
+      Authorities such as US-California, European Union, Great Britain, Saudi Arabia and India have specific local rules and tarrifs.
+
+      <em>Product Passport</em> enables conformance verification.
   - icon: icon-fdi
     headline: Open standards, open data
-    text: 'Transforming data from individual scientific studies into shared data repositories.\nChapters in countries coordinate to synchronize local research with international research.\nFor example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India) and others.'
+    text: |
+      Transforming data from individual scientific studies into shared data repositories.
+
+      New discovers may be derived by comparing multiple stodies on related topics.
+
+      Chapters in countries coordinate to synchronize local research with international research.
+      
+      For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India) and others.
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
