fallback to <em>

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -53,7 +53,7 @@ cards:
 
       Particularly useful for mothers and their children, athletes, and people with specific diets.
 
-      Helps consumers answer composition and formulation questions <strong>not</strong> available on a printed label.
+      Helps consumers answer composition and formulation questions <em>not</em> available on a printed label.
 
       Helps pet owners track food and medicine consumed by their companions.
 
@@ -63,7 +63,7 @@ cards:
     text: |
       Electronic data about cosmetics, textiles and household chemicals helps track use and exposure to components over days, weeks, months, years.
 
-     Helps consumers answer questions about fibers and chemicals <strong>not</strong> available on a printed label.
+     Helps consumers answer questions about fibers and chemicals <em>not</em> available on a printed label.
      
      Helps determine links between use/exposure and health outcomes.'
   - icon: icon-electronic-label
