--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -41,57 +41,53 @@ cards:
   - icon: icon-ontomatica
     headline: Integrated Development Environment
     text: |
-      <em>Plato</em> (Platform for ontologies) applies functional programming and structured data during application development.
+      Simplified application development using structured data and functional programming.
 
-      Curated datasets promote standardization and reuse.
+      Curated datasets enable data sharing.
 
-      Visualization and machine&#x2010;reasoning improve dataset quality ovr time.
+      Visualization and machine-reasoning improve dataset quality over time.
   - icon: icon-daily-food
     headline: Tracking biology and chemistry
     text: |
-      Electronic food and drug data helps track component intake over days, weeks, months, years.
+      Track component intake over days, weeks, months, years using electronic food and drug data.
 
-      Particularly useful for mothers and their children, athletes, and people with specific diets.
+      Consumers query composition and formulation information not available on printed labels.
 
-      Helps consumers answer composition and formulation questions <strong>not</strong> available on a printed label.
+      Pet owners track food and medicine consumed by their companions.
 
-      Helps pet owners track food and medicine consumed by their companions.
-
-      Helps determine links between intake and health outcomes
+      Determine links between food intake and health outcomes.
   - icon: icon-daily-care
     headline: Tracking biology and chemistry
     text: |
-      Electronic data about cosmetics, textiles and household chemicals helps track use and exposure to components over days, weeks, months, years.
+      Track use and exposure to components over days, weeks, months, years using electronic cosmetics, textiles and household chemicals data.
 
-      Helps consumers answer questions about fibers and chemicals <strong>not</strong> available on a printed label.
+      Consumers query chemical and fiber information not available on a printed label.
      
-      Helps determine links between use/exposure and health outcomes.
+      Determine links between use/exposure and health outcomes.
   - icon: icon-electronic-label
     headline: Identity and counterfeits
     text: |
-      Electronic data helps promote a product's identity and impede a counterfeit product that claims to be equivalent.
+      Promote a product's identity and impede counterfeit products and claims.
 
       Create new label by combining existing labels and adding new information.
 
-      Electronic labels improve machine&#x2010;automation by supplying structured data to a machine's function.
+      Improve machine-automation by using structured data to control machine-operations.
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
     text: |
-      DailyFood's <em>Biograph</em> is a companion to person's Electronic Health Record.
-
-      ExImData's <em>Product Passport</em> is a companion to a company's Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).
+      Product Passport is a companion to paper documents such as Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).
 
       Authorities such as US-California, European Union, Great Britain, Saudi Arabia and India have specific local rules and tarrifs.
 
-      <em>Product Passport</em> enables conformance verification.
+      Product Passport enables verification automation.
   - icon: icon-fdi
     headline: Open standards, open data
     text: |
-      Transforming data from individual scientific studies into shared data repositories.
+      Transform data from individual scientific studies into shared data repositories.
 
-      New discovers may be derived by comparing multiple stodies on related topics.
+      Formulate new solutions by comparing multiple studies on related topics.
 
-      Chapters in countries coordinate to synchronize local research with international research.
+      Country organization synchronize local research with international research.
       
       For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India) and others.
 
@@ -207,17 +203,15 @@ success_stories:
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
       <h2 class="ap-h2">{{ _('New information technology should aspire to accomplish two goals:') }}</h2>
-      <ol>
-      <li class="ap-center-stage-copy ap-p-large">
-        {{ _("take a business process that exists in many places and markedly reduce the total cost of its implementation.") }}
-      </li>
-      <li class="ap-center-stage-copy ap-p-large">
-        {{ _("develop new, productive habits among consumers.") }}
-      </li>
-      </ol>
       <p class="ap-center-stage-copy ap-p-large">
-        {{ _("Consortium members aspire to accomplish both.") }}
+        {{ _("Take a business process that exists in many places and significantly reduce the total cost of its implementation.") }}
       </p>
+      <p class="ap-center-stage-copy ap-p-large">
+        {{ _("Develop new, productive habits among consumers.") }}
+      </p>
+      <h2 class="ap-h2">
+        {{ _("Consortium members aspire to accomplish both.") }}
+      </h2>
     </div>
   </section>
 
