--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -39,35 +39,35 @@ format_explainer:
 
 cards:
   - icon: icon-ontomatica
-    headline: Integrated Development Environment
+    headline: Simpliefied application development
     text: |
       Simplified application development using structured data and functional programming.
 
-      Curated datasets enable data sharing.
+      Curated data definitions and datasets enable data sharing.
 
       Visualization and machine-reasoning improve dataset quality over time.
   - icon: icon-daily-food
-    headline: Tracking biology and chemistry
+    headline: Track biology and chemistry of food and drugs
     text: |
-      Track component intake over days, weeks, months, years using electronic food and drug data.
+      Track component intake over days, weeks, months, and years using electronic data about food and drugs.
 
-      Consumers query composition and formulation information not available on printed labels.
+      Query composition and formulation information that is not available on printed labels.
 
       Pet owners track food and medicine consumed by their companions.
 
       Determine links between food intake and health outcomes.
   - icon: icon-daily-care
-    headline: Tracking biology and chemistry
+    headline: Track biology and chemistry of cosmetics, textiles and household chemicals
     text: |
-      Track use and exposure to components over days, weeks, months, years using electronic cosmetics, textiles and household chemicals data.
+      Track use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals.
 
-      Consumers query chemical and fiber information not available on a printed label.
+      Query chemical and fiber information that is not available on a printed label.
      
       Determine links between use/exposure and health outcomes.
   - icon: icon-electronic-label
-    headline: Identity and counterfeits
+    headline: Build product identity and impede counterfeits
     text: |
-      Promote a product's identity and impede counterfeit products and claims.
+      Use electronic product identity to impede counterfeit products and claims.
 
       Create new label by combining existing labels and adding new information.
 
@@ -75,21 +75,21 @@ cards:
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
     text: |
-      Product Passport is a companion to paper documents such as Invoice, Bill of Lading and Material Safety Data Sheet (MSDS).
+      Product Passport is a companion to paper documents such as Invoice, Bill of Lading, and Material Safety Data Sheet.
 
-      Authorities such as US-California, European Union, Great Britain, Saudi Arabia and India have specific local rules and tarrifs.
+      Authorities (US-California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.
 
-      Product Passport enables verification automation.
+      Product Passport enables automated verification of imports and exports.
   - icon: icon-fdi
-    headline: Open standards, open data
+    headline: Open standards, Open data
     text: |
       Transform data from individual scientific studies into shared data repositories.
 
       Formulate new solutions by comparing multiple studies on related topics.
 
-      Country organization synchronize local research with international research.
+      National organization synchronize local research with international research.
       
-      For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India) and others.
+      For example, FDI-USA shares research data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
