--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -39,9 +39,9 @@ format_explainer:
 
 cards:
   - icon: icon-ontomatica
-    headline: Simpliefied application development
+    headline: Simplify application development
     text: |
-      Simplified application development using structured data and functional programming.
+      Application development tools use structured data and functional programming.
 
       Curated data definitions and datasets enable data sharing.
 
@@ -75,9 +75,9 @@ cards:
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
     text: |
-      Product Passport is a companion to paper documents such as Invoice, Bill of Lading, and Material Safety Data Sheet.
+      Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet.
 
-      Authorities (US-California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.
+      Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.
 
       Product Passport enables automated verification of imports and exports.
   - icon: icon-fdi
@@ -85,11 +85,11 @@ cards:
     text: |
       Transform data from individual scientific studies into shared data repositories.
 
-      Formulate new solutions by comparing multiple studies on related topics.
+      Discover new solutions by comparing data from multiple studies.
 
-      National organization synchronize local research with international research.
+      National organization synchronize local and international research.
       
-      For example, FDI-USA shares research data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.
+      For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
@@ -204,13 +204,13 @@ success_stories:
     <div class="ap-center-stage-content">
       <h2 class="ap-h2">{{ _('New information technology should aspire to accomplish two goals:') }}</h2>
       <p class="ap-center-stage-copy ap-p-large">
-        {{ _("Take a business process that exists in many places and significantly reduce the total cost of its implementation.") }}
+        {{ _("Take an existing business process and significantly reduce the total cost of its implementation.") }}
       </p>
       <p class="ap-center-stage-copy ap-p-large">
         {{ _("Develop new, productive habits among consumers.") }}
       </p>
       <h2 class="ap-h2">
-        {{ _("Consortium members aspire to accomplish both.") }}
+        {{ _("Consortium members aspire to accomplish both goals.") }}
       </h2>
     </div>
   </section>
