--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -47,29 +47,29 @@ cards:
 
       Visualization and machine-reasoning improve dataset quality over time.
   - icon: icon-daily-food
-    headline: Track biology and chemistry of food and drugs
+    headline: Monitor biology & chemistry of food & drugs
     text: |
-      Track component intake over days, weeks, months, and years using electronic data about food and drugs.
+      Monitor component intake over days, weeks, months, and years using electronic data about food and drugs.
 
       Query composition and formulation information that is not available on printed labels.
 
-      Pet owners track food and medicine consumed by their companions.
+      Pet owners monitor food and medicine for their companions.
 
       Determine links between food intake and health outcomes.
   - icon: icon-daily-care
-    headline: Track biology and chemistry of cosmetics, textiles and household chemicals
+    headline: Monitor biology & chemistry of cosmetics, textiles & household chemicals
     text: |
-      Track use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals.
+      Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals.
 
       Query chemical and fiber information that is not available on a printed label.
      
       Determine links between use/exposure and health outcomes.
   - icon: icon-electronic-label
-    headline: Build product identity and impede counterfeits
+    headline: Define product identity & impede counterfeits
     text: |
       Use electronic product identity to impede counterfeit products and claims.
 
-      Create new label by combining existing labels and adding new information.
+      Create a new label by combining existing labels and adding new information.
 
       Improve machine-automation by using structured data to control machine-operations.
   - icon: icon-export-import-data
@@ -87,7 +87,7 @@ cards:
 
       Discover new solutions by comparing data from multiple studies.
 
-      National organization synchronize local and international research.
+      National organizations synchronize local and international research.
       
       For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.
 
