--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -38,58 +38,7 @@ format_explainer:
     url: /
 
 cards:
-  - icon: icon-ontomatica
-    headline: Simplify application development
-    text: |
-      Application development tools use structured data and functional programming.
-
-      Curated data definitions and datasets enable data sharing.
-
-      Visualization and machine-reasoning improve dataset quality over time.
-  - icon: icon-daily-food
-    headline: Monitor biology & chemistry of food & drugs
-    text: |
-      Monitor component intake over days, weeks, months, and years using electronic data about food and drugs.
-
-      Query composition and formulation information that is not available on printed labels.
-
-      Pet owners monitor food and medicine for their companions.
-
-      Determine links between food intake and health outcomes.
-  - icon: icon-daily-care
-    headline: Monitor biology & chemistry of cosmetics, textiles & household chemicals
-    text: |
-      Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals.
-
-      Query chemical and fiber information that is not available on a printed label.
-     
-      Determine links between use/exposure and health outcomes.
-  - icon: icon-electronic-label
-    headline: Define product identity & impede counterfeits
-    text: |
-      Use electronic product identity to impede counterfeit products and claims.
-
-      Create a new label by combining existing labels and adding new information.
-
-      Improve machine-automation by using structured data to control machine-operations.
-  - icon: icon-export-import-data
-    headline: Be a friend to Authorities
-    text: |
-      Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet.
-
-      Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.
-
-      Product Passport enables automated verification of imports and exports.
-  - icon: icon-fdi
-    headline: Open standards, Open data
-    text: |
-      Transform data from individual scientific studies into shared data repositories.
-
-      Discover new solutions by comparing data from multiple studies.
-
-      National organizations synchronize local and international research.
-      
-      For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others.
+  - !g.doc /content/amp-dev/pages/shared/data/cards-new.yaml
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
@@ -202,13 +151,13 @@ success_stories:
 
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
-      <h2 class="ap-h2">{{ _('New information technology should aspire to accomplish two goals:') }}</h2>
-      <p class="ap-center-stage-copy ap-p-large">
-        {{ _("Take an existing business process and significantly reduce the total cost of its implementation.") }}
-      </p>
-      <p class="ap-center-stage-copy ap-p-large">
+      <h2 class="ap-h2">{{ _("New information technology should aspire to accomplish two goals:") }}</h2>
+      <h2 class="ap-center-stage-copy ap-p-large">
+        {{ _("Take an existing business process and significantly reduce its total cost of implementation.") }}
+      </h2>
+      <h2 class="ap-center-stage-copy ap-p-large">
         {{ _("Develop new, productive habits among consumers.") }}
-      </p>
+      </h2>
       <h2 class="ap-h2">
         {{ _("Consortium members aspire to accomplish both goals.") }}
       </h2>
