--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -38,7 +38,7 @@ format_explainer:
     url: /
 
 cards:
-  - !g.doc /content/pages/shared/data/cards-new.yaml
+  - !g.doc /content/amp-dev/cards.yaml
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
