--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -37,8 +37,7 @@ format_explainer:
     link: "All about Food Data Institute"
     url: /
 
-cards:
-  - !g.doc /content/amp-dev/cards.yaml
+cards: !g.yaml /shared/data/cards.yaml
 
 success_stories:
   - !g.doc /content/amp-dev/runner/success-stories/washingtonpost.yaml
