--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -8,51 +8,51 @@ description: Knowledge graph applications for industry, science and government.
 format_explainer:
   - name: websites
     headline: Ontomatica
-    description: "Creating machine&#x2010;readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for sale in local, national and international markets."
+    description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
     link: "All about Ontomatica"
     url: /
   - name: stories
     headline: DailyFood
-    description: "Serving detailed information about human food and meals, pet food and animal feed in machine&#x2010;readable format. Storing intake history in your personal <em>Biograph</em> &#x2014; companion to your Electronic Health Record."
+    description: "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
     link: "All about DailyFood"
     url: /
   - name: email
     headline: DailyCare
-    description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal <em>Biograph</em>."
+    description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
     link: "All about DailyCare"
     url: /
   - name: ads
     headline: Export Import Data
-    description: "Creating electronic <em>Product Passports</em> for presentation to government organizations administering border control policies and tariffs."
+    description: "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
     link: "All about Export Import Data"
     url: /
   - name: alpha
     headline: Electronic Labels
-    description: "Creating electronic labels with detailed product information in machine&#x2010;readable format for humans &#x26; other intelligent machines."
+    description: "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
     link: "All about Electronic Labels"
     url: /
   - name: beta
     headline: Food Data Institute
-    description: "Developing data specifications for food &#x26; agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
+    description: "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
     link: "All about Food Data Institute"
     url: /
 
 cards:
   - icon: icon-ontomatica
     headline: Simplify application development
-    text: "Application development tools use structured data and functional programming. &#x2022; Curated data definitions and datasets enable data sharing. Visualization and machine-reasoning improve dataset quality over time."
+    text: "Application development tools use structured data and functional programming. Curated data definitions and datasets enable data sharing. Visualization and machine-reasoning improve dataset quality over time."
   - icon: icon-daily-food
-    headline: Monitor biology and chemistry of food and drugs
+    headline: Monitor biology & chemistry of food & drugs
     text: "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
   - icon: icon-daily-care
-    headline: Monitor biology and chemistry of cosmetics, textiles and household chemicals
+    headline: Monitor biology & chemistry of cosmetics, textiles & household chemicals
     text: Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
   - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
     text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations."
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
-    text: "<em>Product Passport</em> is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.  Product Passport enables automated verification of local rules for imports and exports."
+    text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.  Product Passport enables automated verification of local rules for imports and exports."
   - icon: icon-fdi
     headline: Open standards, Open data
     text: "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
@@ -169,12 +169,12 @@ success_stories:
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
       <h2 class="ap-h2">{{ _("New information technology should aspire to accomplish two goals:") }}</h2>
-      <h2 class="ap-center-stage-copy ap-p-large">
+      <h3 class="">
         {{ _("Take an existing business process and significantly reduce its total cost of implementation.") }}
-      </h2>
-      <h2 class="ap-center-stage-copy ap-p-large">
+      </h3>
+      <h3 class="">
         {{ _("Develop new, productive habits among consumers.") }}
-      </h2>
+      </h3>
       <h2 class="ap-h2">
         {{ _("Consortium members aspire to accomplish both goals.") }}
       </h2>
