--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -40,7 +40,7 @@ format_explainer:
 cards:
   - icon: icon-ontomatica
     headline: Simplify application development
-    text: "Application development tools use structured data and functional programming. Curated data definitions and datasets enable data sharing. Visualization and machine-reasoning improve dataset quality over time."
+    text: "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning."
   - icon: icon-daily-food
     headline: Monitor biology & chemistry of food & drugs
     text: "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
@@ -52,7 +52,7 @@ cards:
     text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations."
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
-    text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tarrifs.  Product Passport enables automated verification of local rules for imports and exports."
+    text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities (e.g. USA/California, European Union, Great Britain, Saudi Arabia, India) have specific local rules and tariffs.  Product Passport enables automated verification of global and local rules for imports and exports."
   - icon: icon-fdi
     headline: Open standards, Open data
     text: "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. For example, FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
@@ -87,7 +87,7 @@ success_stories:
     </div>
 
     <div class="ap-home-stage-text">
-      <h1 class="ap-h1">{{ _('Knowledge graph applications for business, science and government.') }}</h1>
+      <h1 class="ap-h1">{{ _('Knowledge graph applications for industry, science and government.') }}</h1>
     </div>
   </section>
   <section class="ap-formats">
