added lorem ipsum

--- a/pages/content/amp-dev/romeo/2/index.html
+++ b/pages/content/amp-dev/romeo/2/index.html
@@ -1,5 +1,5 @@
 ---
-$title: Develop
+$title: Spectre
 $view: /views/2021/base.html
 $path: /2/index.html
 $localization:
@@ -27,6 +27,14 @@ flyout:
   </section>
 
   <section class="ap-t-roadmap-intro">
+    <p class="ap-t-roadmap-intro-text">
+    {{ _('As a source for breaking news and information, Web Stories allow us to showcase our quality journalism when there are multiple elements we want to bring together. Combining reporting, photography, videos and motion graphics, this gives readers a more visual entry point when they are searching for our coverage.') }}
+    </p>
+  </section>
 
+  <section class="ap-t-roadmap-intro">
+    <p class="ap-t-roadmap-intro-text">
+    {{ _('As a source for breaking news and information, Web Stories allow us to showcase our quality journalism when there are multiple elements we want to bring together. Combining reporting, photography, videos and motion graphics, this gives readers a more visual entry point when they are searching for our coverage.') }}
+    </p>
   </section>
 </main>
