--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -233,7 +233,7 @@ success_stories:
 
   <section class="ap-intro ap-section --col-right">
     <div class="ap-text-block">
-      <h1>{{ _('Learn more about structured data applications') }}</h1>
+      <h1>{{ _('Learn more about knowledge graph applications') }}</h1>
       <p>{{ _('Read case studies from industry, science and government.') }}</p>
       {% with %}
         {% set square = true %}
