--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -42,10 +42,10 @@ cards:
     headline: Simplify development of data-intensive applications
     text: "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning."
   - icon: icon-daily-food
-    headline: Monitor biology & chemistry of food and drugs
+    headline: Monitor food and drug biochemistry
     text: "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
   - icon: icon-daily-care
-    headline: Monitor biology & chemistry of cosmetics, textiles and household chemicals
+    headline: Monitor cosmetics, textile and household chemical biochemistry
     text: "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
   - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
