--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -39,22 +39,22 @@ format_explainer:
 
 cards:
   - icon: icon-ontomatica
-    headline: Simplify development of data-intensive applications
-    text: "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning."
+    headline: Simplify development of knowledge graph applications
+    text: "Develop applications using structured data and functional programming. Share data using curated data definitions and datasets. Improve dataset quality using visualization and machine-reasoning. Keep everything synchronized using Plato (Platform for ontologies)."
   - icon: icon-daily-food
-    headline: Monitor food and drug biochemistry
+    headline: Monitor food & drug biochemistry
     text: "Monitor component intake over days, weeks, months, and years using electronic data about food and drugs. Query composition and formulation information that is not available on printed labels. Pet owners monitor food and medicine for their companions. Determine links between food intake and health outcomes."
   - icon: icon-daily-care
-    headline: Monitor cosmetics, textile and household chemical biochemistry
+    headline: Monitor cosmetics, textile & household chemical biochemistry
     text: "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
   - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
-    text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations."
+    text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental factors."
   - icon: icon-export-import-data
     headline: Be a friend to Authorities
     text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
   - icon: icon-fdi
-    headline: Research using open standards & open data
+    headline: Open standards & open data research
     text: "Transform data from individual scientific studies into shared data repositories. Discover new solutions by comparing data from multiple studies. National organizations synchronize local and international research. Example: FDI-USA shares data with FDI-CAN (Canada), FDI-GBR (Great Britain), FDI-SAU (Saudi Arabia), FDI-IND (India), and others."
 
 success_stories:
