--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -6,7 +6,7 @@ $titles:
 description: Knowledge graph applications for industry, science and government.
 
 format_explainer:
-  - name: websites
+  - name: ontomatica
     headline: Ontomatica
     description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
     link: "All about Ontomatica"
