switched from icon-export-import-data to logo-
testing sprite

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -50,7 +50,7 @@ cards:
   - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
     text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
-  - icon: icon-export-import-data
+  - icon: logo-export-import-data
     headline: Be a friend to Authorities
     text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
   - icon: icon-fdi
