--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -47,10 +47,10 @@ cards:
   - icon: icon-daily-care
     headline: Monitor cosmetics, textile & household chemical biochemistry
     text: "Monitor use and exposure to components over days, weeks, months, and years using electronic data about cosmetics, textiles and household chemicals. Query chemical and fiber information that is not available on a printed label. Determine links between use/exposure and health outcomes."
-  - icon: logo-electronic-label
+  - icon: icon-electronic-label
     headline: Define product identity and impede counterfeits
     text: "Use electronic product identity to impede counterfeit products and claims. Create a new label by combining existing labels and adding new information. Improve machine-automation by using structured data to control machine-operations. Example: agriculture equipment calibrated by chemical formulations and environmental conditions."
-  - icon: logo-export-import-data-usa
+  - icon: icon-export-import-data-usa
     headline: Be a friend to Authorities
     text: "Product Passport is a companion to paper documents such as an Invoice, Bill of Lading, and Material Safety Data Sheet. Authorities have specific local rules and tariffs. Examples: USA/California, European Union, Great Britain, Saudi Arabia, India. Product Passport enables automated verification of global and local rules for imports and exports."
   - icon: icon-fdi
