--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -72,7 +72,7 @@ success_stories:
         <path d="M18 11.38a4 4 0 0 0-3.51-3.88 5.1 5.1 0 0 0-5.25-4.88A5.25 5.25 0 0 0 4.22 6 4.8 4.8 0 0 0 0 10.67a4.9 4.9 0 0 0 5.07 4.71h8.65a.78.78 0 0 0 .22 0 4.1 4.1 0 0 0 4.06-4Z" style="fill:#e1eb64; stroke:#09a600; stroke-width: 0.12"/>
         <path d="M5.42 10.39h-.88a1.09 1.09 0 1 0 0 .49h.88a.2.2 0 0 1 .2.2v4.3h.49v-4.3a.69.69 0 0 0-.69-.69Zm-1.95.88a.64.64 0 1 1 .64-.64.64.64 0 0 1-.64.64Z" style="fill:#c80000"/>
         <path d="M8.94 10.61v-1a.7.7 0 0 0-.7-.7H6.69a.2.2 0 0 1-.2-.2V3.4l-.23.12-.26.14v5a.69.69 0 0 0 .69.69h1.55a.21.21 0 0 1 .21.21v1a1.08 1.08 0 0 0-.85 1.06 1.09 1.09 0 1 0 1.34-1.06Zm-.25 1.7a.64.64 0 1 1 .64-.64.64.64 0 0 1-.64.64Z" style="fill:#5500d7"/>
-        <path d="M14.53 8.5a1.09 1.09 0 0 0-.25 2.15v.2a.21.21 0 0 1-.21.21h-2V7.54a.69.69 0 0 0-.69-.69h-1.03A1.08 1.08 0 0 0 9.29 6a1.09 1.09 0 1 0 1.06 1.34h1.07a.2.2 0 0 1 .2.2v7.84h.49v-3.83h2a.7.7 0 0 0 .7-.7v-.2a1.09 1.09 0 0 0 .85-1.06 1.09 1.09 0 0 0-1.13-1.09Zm-5.24-.77a.64.64 0 1 1 .64-.64.64.64 0 0 1-.64.64Zm5.24 2.5a.64.64 0 1 1 .63-.64.64.64 0 0 1-.63.64Z" style="fill:#005af0"/>
+        <path d="M14.53 8.5a1.09 1.09 0 0 0-.25 2.15v.2a.21.21 0 0 1-.21.21h-2V7.54a.69.69 0 0 0-.69-.69h-1.03A1.08 1.08 0 0 0 9.29 6a1.09 1.09 0 1 0 1.06 1.34h1.07a.2.2 0 0 1 .2.2v7.84h.49v-3.83h2a.7.7 0 0 0 .7-.7v-.2a1.09 1.09 0 0 0 .85-1.06 1.09 1.09 0 0 0-1.13-1.09Zm-5.24-.77a.64.64 0 1 1 .64-.64.64.64 0 0 1-.64.64Zm5.24 2.5a.64.64 0 1 1 .63-.64.64.64 0 0 1-.63.64Z" style="fill:#1f64ff"/>
       </svg>
     </div>
 
