update index-2021 with new icon names

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -11,27 +11,27 @@ format_explainer:
     description: "Creating machine-readable information about foods, drugs, cosmetics, textiles, chemicals and commodities for selling in local, national and international markets."
     link: "All about Ontomatica"
     url: /
-  - name: stories
+  - name: daily-food
     headline: DailyFood
     description: "Serving detailed information about human food and meals, pet food and animal feed in machine-readable format. Storing intake history in your personal Biograph - companion to your Electronic Health Record."
     link: "All about DailyFood"
     url: /
-  - name: email
+  - name: daily-care
     headline: DailyCare
     description: "Serving detailed information about cosmetics, textiles, and household chemicals in machine&#x2010;readable format. Storing exposure and contact history in your personal Biograph."
     link: "All about DailyCare"
     url: /
-  - name: ads
+  - name: export-import-data
     headline: Export Import Data
     description: "Creating electronic Product Passports for presentation to government organizations administering border control policies and tariffs."
     link: "All about Export Import Data"
     url: /
-  - name: alpha
+  - name: electronic-label
     headline: Electronic Labels
     description: "Creating electronic labels with detailed product information in machine-readable format for humans & other intelligent machines."
     link: "All about Electronic Labels"
     url: /
-  - name: beta
+  - name: food-data-institute
     headline: Food Data Institute
     description: "Developing data specifications for food & agriculture. Serving repositories for recording and comparing research data and discovering new solutions."
     link: "All about Food Data Institute"
